# noscope

./: .gitignore  README.md  requirements.txt  setup.py
analysis/: heatmap.py  visualize_yolo.py
cpp/dpm/: Makefile  dpm.cpp
cpp/mse_cpu/: CMakeLists.txt  mse_cpu.cpp
example/: noscope_motherdog.py  noscope_optimizer.py  run.sh
exp/: ColorHistTest3.py  baseline.py  big_cnn.py  blocked_filters.py  coco_baseline.py  diff_utils.py  difference_detector.py  hog.py  hog_classifier.py  hyperband.py  image_metrics.py  pretrained.py  run_all_image_metrics.py  run_blocked_filters.py  run_gold_standard_blocked_filters.py  run_hog.py  run_sift.py  run_trained_hog.py  shuffled_small_cnn.py  sift.py  small_cnn.py  to_avg.py  trained_hog.py
noscope/: CommonUtils.py  DataUtils.py  Learner.py  Metrics.py  Models.py  Reencode.py  SpeedTests.py  StatsUtils.py  TimeLapse.py  VideoUtils.py  Visualizer.py  __init__.py  np_utils.py
noscope/filters/: BlockedFilter.py  BlockedHistogram.py  BlockedRawImage.py  ColorHistogram.py  HOG.py  RawImage.py  SIFT.py  SURF.py
optimizer/: README  noscope_accuracy.py  noscope_motherdog.py  noscope_optimizer.py  vuse_accuracy.py  vuse_motherdog.py  vuse_optimizer.py
scripts/: Makefile  VUSELabeler.py  crop.py  daniel-crop.py  decode_to_bin.cpp  export-tf-graphs.py  freeze_graph.py  gen_accuracy_plot.py  gen_table.py  get_diff.py  get_label_accruacy  get_video_label_stats  get_video_metadata  meta  move-files.py  overlay.py  partition_coco_dataset.py  reencode.py  scrape-ffmpeg.sh  scrape.sh  smooth_labels  time-lapse.py
